# BwtFS

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  README_CONFIG.md  README_DEV.md  go.mod  main.go
base/: baseDefination.go
bwt/: fileSystemDefination.go  fileSystemImplementation.go  physicalFileDefination.go  physicalFileImplementation.go
cmd/: CMakeLists.txt  README.md  command_handler.cpp  command_handler.h  file_operations.cpp  file_operations.h  main.cpp  ui_helper.cpp  ui_helper.h
examples/go/: README.md  bwtfs_client.go
examples/python/: README.md  bwtfs_client.py
fs/: CMakeLists.txt  README.md  README_DEV.md  core.cpp  core.h  main.cpp  manager.hpp
include/: BwtFS.h  config.h  file_system.hpp
include/file/: base_file.h  bitmap.h  system.h  system_file.h
include/node/: base_node.h  binary.h  black_node.h  bt_tree.h  bw_node.h  bw_tree.h  entry.h  gray_node.h  white_node.h
include/util/: binary.hpp  binary_operation.h  binary_operation.hpp  cell.h  date.h  ini_parser.h  log.h  memory_pool.h  prefix.h  random.h  safe_queue.h  safe_vector.h  secure_ptr.h  thread_pool.h  token.h
lib/: README.md
net/: CMakeLists.txt  README.md  README_DEV.md  main.cpp  server.hpp
net/web/: .env  README.md  package-lock.json  package.json  pnpm-lock.yaml
net/web/public/: index.html
net/web/src/: App.css  App.tsx  index.css  setupTests.js
net/web/src/components/: ApiConfig.tsx  FileManager.tsx  FilePreview.tsx  Header.tsx  Notification.tsx
net/web/src/contexts/: SystemInfoContext.tsx
net/web/src/services/: api.ts  fileManager.ts
net/web/src/types/: index.ts
resp_client/: CMakeLists.txt  main.cpp
src/: BwtFS.cpp  CMakeLists.txt  config.cpp  file_system.cpp  main.cpp
src/file/: bitmap.cpp  system.cpp  system_file.cpp
src/node/: base_node.cpp  binary.cpp  entry.cpp  white_node.cpp
src/util/: binary_operation.cpp  cell.cpp  date.cpp  ini_parser.cpp  log.cpp  prefix.cpp  random.cpp
storge/: blockDefination.go  blockImplementation.go
test/: CMakeLists.txt  file_system_test.cpp  main.cpp
test/node/: binary_test.cpp  bwt_test.cpp  data_node_test.cpp  entry_test.cpp
test/util/: cell_test.cpp  token_test.cpp
tool/: bwtInterface.go  check.go  coding.go  file.go  logger.go  storgeInterface.go  token.go
